tests/fixtures/type_errors/if_branch_mismatch.airl
;; ERROR: type
;; If branches return different types
(if false 42 (+ "hello" 1))
